Stopped flickering of underlying grid-tiles for a short moment when a tile is expanded

--- a/styles/app.css
+++ b/styles/app.css
@@ -117,7 +117,7 @@ md-grid-tile.expand-remove {
   transition: box-shadow 0.4s ease-in-out 0.6s, top 0.5s ease-in-out 0.1s, left 0.5s ease-in-out 0.1s, width 0.5s ease-in-out 0.1s, height 0.5s ease-in-out 0.1s;
   z-index: 10;
 }
-md-grid-tile.expanded {
+md-grid-tile.expanded, md-grid-tile.expand {
   z-index: 10;
 }
 .playlist-files {
